force-app/main/default/objects/Account/fields/SVMXC__Access_Hours__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Access_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Access Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>