force-app/main/default/objects/Account/fields/Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Code__c</fullName>
    <description>Field to display internal Illumina Territory Code</description>
    <inlineHelpText>Internal Illumina territory code.</inlineHelpText>
    <label>Territory Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>