force-app/main/default/objects/Account/fields/Territory_Region__c.field-meta.xml
<CustomField>
    <fullName>Territory_Region__c</fullName>
    <description>Field to display internal Illumina Territory Region</description>
    <inlineHelpText>Internal Illumina territory region.</inlineHelpText>
    <label>Territory Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>