force-app/main/default/objects/Account/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>Field to display internal llumina account designation</description>
    <inlineHelpText>Internal llumina account designation.</inlineHelpText>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tier</valueSetName>
    </valueSet>
</CustomField>