force-app/main/default/objects/Account/fields/Ultimate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent__c</fullName>
    <description>The formula gets the highest level parent in the current account hierarchy using the standard Parent Account Lookup</description>
    <formula>IF ( 
    NOT ( 
        ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name)
    ), 
    Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name, 
    IF ( 
        NOT ( 
            ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name)
        ), 
        Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name, 
        IF ( 
            NOT (
                ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name) 
            ), 
            Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name, 
            IF ( 
                NOT (
                    ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name) 
                ), 
                Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name, 
                IF ( 
                    NOT (
                        ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Name) 
                    ), 
                    Parent.Parent.Parent.Parent.Parent.Parent.Name, 
                    IF ( 
                        NOT (
                            ISBLANK(Parent.Parent.Parent.Parent.Parent.Name) 
                        ), 
                        Parent.Parent.Parent.Parent.Parent.Name, 
                        IF ( 
                            NOT ( 
                                ISBLANK(Parent.Parent.Parent.Parent.Name) 
                            ), 
                            Parent.Parent.Parent.Parent.Name, 
                            IF ( 
                                NOT ( 
                                    ISBLANK(Parent.Parent.Parent.Name) 
                                ), 
                                Parent.Parent.Parent.Name, 
                                IF ( 
                                    NOT ( 
                                        ISBLANK(Parent.Parent.Name) 
                                    ), 
                                    Parent.Parent.Name, 
                                    IF ( 
                                        NOT ( 
                                            ISBLANK(Parent.Name) 
                                        ), 
                                        Parent.Name, 
                                        Name
                                    ) 
                                )   
                            )    
                        )   
                    )      	
                )     
            )        
        )       
    )   
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Parent entity at highest level of customer hierarchy.</inlineHelpText>
    <label>Ultimate Parent</label>
    <type>Text</type>
</CustomField>