force-app/main/default/objects/Account/fields/Ultimate_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Id__c</fullName>
    <description>Field that gets the id of the highest level parent in the current account hierarchy using the standard Parent Account Lookup</description>
    <formula>IF ( 
NOT ( 
ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId)
), 
Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId, 
IF ( 
NOT ( 
ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId)
), 
Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId, 
IF ( 
NOT (
ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId) 
), 
Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId, 
IF ( 
NOT (
ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.ParentId) 
), 
Parent.Parent.Parent.Parent.Parent.Parent.ParentId, 
IF ( 
NOT (
ISBLANK(Parent.Parent.Parent.Parent.Parent.ParentId) 
), 
Parent.Parent.Parent.Parent.Parent.ParentId, 
IF ( 
NOT (
ISBLANK(Parent.Parent.Parent.Parent.ParentId) 
), 
Parent.Parent.Parent.Parent.ParentId, 
IF ( 
NOT ( 
ISBLANK(Parent.Parent.Parent.ParentId) 
), 
Parent.Parent.Parent.ParentId, 
IF ( 
NOT ( 
ISBLANK(Parent.Parent.ParentId) 
), 
Parent.Parent.ParentId, 
IF ( 
NOT ( 
ISBLANK(Parent.ParentId) 
), 
Parent.ParentId, 
IF ( 
NOT ( 
ISBLANK(ParentId) 
), 
ParentId, 
Id
) 
) 
) 
) 
) 
) 
) 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Parent Id</label>
    <type>Text</type>
</CustomField>