force-app/main/default/objects/Account/fields/VAD_Channel_Partner_Territory__c.field-meta.xml
<CustomField>
        <fullName>VAD_Channel_Partner_Territory__c</fullName>
        <description>Territory Codes of Related Value Added Distributor Territory Types</description>
        <label>VAD Channel Partner Territory</label>
        <length>255</length>
        <type>Text</type>
</CustomField>