force-app/main/default/objects/Account/fields/Zip_Postal_Code_Local__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code_Local__c</fullName>
    <description>Local Address Postal Code information as part of DCP-760</description>
    <inlineHelpText>Address postal code in local language.</inlineHelpText>
    <label>Zip/Postal Code (Local)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>