force-app/main/default/objects/Account/recordTypes/Channel_Partner_Prospect.recordType-meta.xml
<RecordType>
    <fullName>Channel_Partner_Prospect</fullName>
    <active>true</active>
    <description>Record type is used for creating channel partner prospect accounts in Salesforce</description>
    <label>Channel Partner Prospect</label>
</RecordType>