force-app/main/default/objects/Account/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <description>Record type is maintained by Master Data for accounts that are upgraded to Sold To or Ultimate Consignee</description>
    <label>Customer</label>
</RecordType>