force-app/main/default/objects/Account/recordTypes/Illumina_Internal.recordType-meta.xml
<RecordType>
    <fullName>Illumina_Internal</fullName>
    <active>true</active>
    <description>Record type is used to track internal Illumina locations to manage cases and work orders against Illumina owned assets</description>
    <label>Illumina Internal</label>
</RecordType>