force-app/main/default/objects/Account/recordTypes/Indirect_Partner.recordType-meta.xml
<RecordType>
    <fullName>Indirect_Partner</fullName>
    <active>true</active>
    <description>Record type is maintained by Master Data for partner accounts that are upgraded to Distributors (Distributor/Dealer, Value Added Distributor, Service Partner, OEM, etc.)</description>
    <label>Indirect Partner</label>
</RecordType>