force-app/main/default/objects/Account/validationRules/CheckAccountNameAndCurrencyOnChange.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAccountNameAndCurrencyOnChange</fullName>
    <active>true</active>
    <description>Prevents the service user to edit Account Name and Currency</description>
    <errorConditionFormula>AND ( 
OR ( 
$Profile.Name=$Label.ProfileFieldService, 
$Profile.Name=$Label.ProfileTechnicalSupport,
$Profile.Name=$Label.ProfileCustomerService
), 
OR(
ISCHANGED( Name ), 
ISCHANGED( CurrencyIsoCode )
)
)</errorConditionFormula>
    <errorMessage>You cannot edit the Account Name and Account Currency.</errorMessage>
</ValidationRule>