force-app/main/default/objects/Account/validationRules/CheckAccountNameOnChange.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAccountNameOnChange</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
     OR ( 
         RecordType.DeveloperName = $Label.AccountRecordTypeIndirectPartner,  
         RecordType.DeveloperName = $Label.AccountRecordTypeCustomer
     ), 
     ISCHANGED( Name ),
     NOT(ISCHANGED(Is_Updated_By_System__c)), 
     NOT(Is_Updated_By_System__c)  
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You cannot edit the Account Name.</errorMessage>
</ValidationRule>