force-app/main/default/objects/Account/validationRules/CheckAccountOwnerOnChange.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAccountOwnerOnChange</fullName>
    <active>true</active>
    <description>This rule will prevent the sales user from manually updating the account owner field. The rule will be bypassed for System admin.</description>
    <errorConditionFormula>AND(
                ISCHANGED( OwnerId ),
    NOT(
                    OR(
                                    ISCHANGED(Is_Updated_By_System__c), 
            Is_Updated_By_System__c,
                        $Profile.Name = $Label.ProfileSystemAdmin  
                                )
    )                               
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>You cannot edit the Account Owner.</errorMessage>
</ValidationRule>