force-app/main/default/objects/Account/validationRules/CheckAccountRecordTypeOnChange.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAccountRecordTypeOnChange</fullName>
    <active>true</active>
    <description>Prevents the user to edit the Record type field for all the record types and created as a part of the DCP-2733. Will be bypassed for Data Steward and System Administration Profile as part of DCP-29291.</description>
    <errorConditionFormula>AND(
				NOT(
								OR(
		         $Profile.Name=$Label.ProfileSystemAdmin,
           $Profile.Name=$Label.ProfileDataSteward,
 $Profile.Name=$Label.Profile_SNAP_Integration 
        )
				),
ISCHANGED(RecordTypeId)
)</errorConditionFormula>
    <errorMessage>Record type cannot be manually changed</errorMessage>
</ValidationRule>