force-app/main/default/objects/Account/validationRules/CheckCityLength.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckCityLength</fullName>
    <active>true</active>
    <description>Validates the length of the Account City.</description>
    <errorConditionFormula>LEN ( BillingCity ) &gt; 40</errorConditionFormula>
    <errorDisplayField>BillingCity</errorDisplayField>
    <errorMessage>Length of City should be less than or equal to 40 characters.</errorMessage>
</ValidationRule>