force-app/main/default/objects/Account/validationRules/CheckLocalNameLength.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckLocalNameLength</fullName>
    <active>true</active>
    <description>Validates the Account Local Name length.</description>
    <errorConditionFormula>LEN ( NameLocal ) &gt; 140</errorConditionFormula>
    <errorDisplayField>NameLocal</errorDisplayField>
    <errorMessage>Please adjust the Account Name (Local) and reduce the length to 140 characters.</errorMessage>
</ValidationRule>