force-app/main/default/objects/Account/validationRules/CheckMarketSegmentEditOnLayout.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckMarketSegmentEditOnLayout</fullName>
    <active>true</active>
    <description>This Validation rule prevents user from updating the market segment field by the user via the account layout</description>
    <errorConditionFormula>AND(
    NOT( ISNEW() ),
    ISCHANGED( Market_Segment__c ),
    NOT($Permission.DS_Edit_Market_Segment),
    NOT(ISCHANGED( Is_Updated_By_System__c )) 
)</errorConditionFormula>
    <errorDisplayField>Market_Segment__c</errorDisplayField>
    <errorMessage>Please click &apos;Submit Prospect&apos; tab to edit market segmentation.</errorMessage>
</ValidationRule>