force-app/main/default/objects/Account/validationRules/CheckMarketSegmentOnCreate.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckMarketSegmentOnCreate</fullName>
    <active>true</active>
    <description>Prevents the creation of Account with Multiple as value</description>
    <errorConditionFormula>AND(
    ISNEW(),
    ISPICKVAL( Market_Segment__c,&apos;Multiple&apos; ),
    NOT(
        OR(
           ISCHANGED( Is_Updated_By_System__c ),
           Is_Updated_By_System__c 
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Market_Segment__c</errorDisplayField>
    <errorMessage>Market Segment of &quot;Multiple&quot; cannot be selected, please select another value.</errorMessage>
</ValidationRule>