force-app/main/default/objects/Account/validationRules/CheckNameLength.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckNameLength</fullName>
    <active>true</active>
    <description>Validates the Account name length.</description>
    <errorConditionFormula>LEN ( Name ) &gt; 140</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please adjust the Account Name and reduce the length to 140 characters.</errorMessage>
</ValidationRule>