force-app/main/default/objects/Account/validationRules/checkPhoneNumberValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>checkPhoneNumberValidation</fullName>
    <active>false</active>
    <description>TASK0563003</description>
    <errorConditionFormula>AND(
    NOT(
       OR(
          $Profile.Name = $Label.ProfileSystemAdmin,          
          $Profile.Name = $Label.Integration_Sales_SNAP_Profile
         )
       ),
    LEN(Phone) &gt; 0,
    NOT(
         REGEX(Phone, &quot;([0-9-() ])+&quot;) 
    )

)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone numbers can only contain parentheses and dashes.  No other characters are allowed by SAP and will cause integration errors.</errorMessage>
</ValidationRule>