force-app/main/default/objects/Account/validationRules/CheckProspectBillingCityPresent.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckProspectBillingCityPresent</fullName>
    <active>true</active>
    <description>Make the City(Billing City) mandatory for Prospect Account.</description>
    <errorConditionFormula>AND (
    ISBLANK ( BillingCity ) ,
    OR(
		RecordType.Name = &apos;Prospect&apos; ,
		RecordType.DeveloperName =  $Label.AccountRecordTypeDeveloperNameChannelPartnerProspect 
	)
)</errorConditionFormula>
    <errorDisplayField>BillingCity</errorDisplayField>
    <errorMessage>Please enter a City.</errorMessage>
</ValidationRule>