force-app/main/default/objects/Account/validationRules/CheckProspectBillingCountryPresent.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckProspectBillingCountryPresent</fullName>
    <active>true</active>
    <description>Make sure Country (Billing Country) is entered for Prospect Account</description>
    <errorConditionFormula>AND(
    ISBLANK(BillingCountry) ,
    OR(
		RecordType.Name = &apos;Prospect&apos; ,
		RecordType.DeveloperName =  $Label.AccountRecordTypeDeveloperNameChannelPartnerProspect 
	)
)</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>Please enter a Country.</errorMessage>
</ValidationRule>