force-app/main/default/objects/Account/validationRules/CheckProspectBillingStatePresent.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckProspectBillingStatePresent</fullName>
    <active>true</active>
    <description>Make sure State (Billing State) is entered for Prospect Account when Billing Country is any country from the list. List of Country is stored in the Custom Setting.</description>
    <errorConditionFormula>AND (
    /*Keeping code in case in future we need to make more dynamic and not onlu handle US
     CONTAINS( $CustomMetadata.CountryCodeStateRequired__mdt.Country_Values.Country_Part_1__c, TEXT( BillingCountryCode ) )*/
    ISPICKVAL(BillingCountryCode , &apos;US&apos;) ,
    ISBLANK( BillingState ) ,
    RecordType.Name = $Label.AccountProspect 
)</errorConditionFormula>
    <errorDisplayField>BillingState</errorDisplayField>
    <errorMessage>Please enter State/Province.</errorMessage>
</ValidationRule>