force-app/main/default/objects/Account/validationRules/CheckProspectBillingStreetPresent.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckProspectBillingStreetPresent</fullName>
    <active>true</active>
    <description>Validate that Street(Billing Address Street) is present for Prospect Account</description>
    <errorConditionFormula>AND(
    ISBLANK(BillingStreet) ,
	OR(
		RecordType.Name = &apos;Prospect&apos; ,
		RecordType.DeveloperName =  $Label.AccountRecordTypeDeveloperNameChannelPartnerProspect 
	)
)</errorConditionFormula>
    <errorDisplayField>BillingStreet</errorDisplayField>
    <errorMessage>Please enter Street.</errorMessage>
</ValidationRule>