force-app/main/default/objects/Account/validationRules/CheckProspectBillingZipCodePresent.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckProspectBillingZipCodePresent</fullName>
    <active>true</active>
    <description>Make sure ZIp Code (Billing Post Code) is entered for Prospect Account when Billing Country is any country from the list. List of Country is stored in the Custom Setting.</description>
    <errorConditionFormula>AND ( 
    /*Keeping code in case in future we need to make more dynamic and not onlu handle US
     OR(
       CONTAINS( $CustomMetadata.CountryCodeZipRequired__mdt.CountryCodeZIP.Country_Code_Part_1__c, TEXT( BillingCountryCode ) ),
       CONTAINS( $CustomMetadata.CountryCodeZipRequired__mdt.CountryCodeZIP.Country_Code_Part_2__c, TEXT( BillingCountryCode ) )
      )*/
    ISPICKVAL(BillingCountryCode , &apos;US&apos;), 
    ISBLANK( BillingPostalCode ) , 
    RecordType.Name = $Label.AccountProspect 
)</errorConditionFormula>
    <errorDisplayField>BillingPostalCode</errorDisplayField>
    <errorMessage>Please enter Zip/Postal Code.</errorMessage>
</ValidationRule>