force-app/main/default/objects/Account/validationRules/CheckStateZipAndCountryOnChange.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckStateZipAndCountryOnChange</fullName>
    <active>true</active>
    <description>Country Local, State/Province Local, and Zip/Postal Code (Local) cannot be edited by user. These values are directly synced from Master Data.</description>
    <errorConditionFormula>AND(
NOT(
OR(
$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
Is_Updated_By_System__c = true,
$Profile.Name = $Label.ProfileSystemAdmin
)
),
OR(
ISCHANGED(Country_Local__c),
ISCHANGED(State_Province_Local__c),
ISCHANGED(Zip_Postal_Code_Local__c)
)
)</errorConditionFormula>
    <errorMessage>Country Local, State/Province Local, and Zip/Postal Code (Local) cannot be edited by user. These values are directly synced from Master Data.</errorMessage>
</ValidationRule>