force-app/main/default/objects/Account/validationRules/CheckStreetLength.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckStreetLength</fullName>
    <active>true</active>
    <description>Validates the length of the Account Street Address.</description>
    <errorConditionFormula>LEN ( BillingStreet ) &gt; 100</errorConditionFormula>
    <errorDisplayField>BillingStreet</errorDisplayField>
    <errorMessage>Length of Street should be less than or equal to 100 characters.</errorMessage>
</ValidationRule>