force-app/main/default/objects/Account/validationRules/CheckZipPostalLength.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckZipPostalLength</fullName>
    <active>true</active>
    <description>Validates the length of the Account Zip/Postal code.</description>
    <errorConditionFormula>LEN ( BillingPostalCode ) &gt; 10</errorConditionFormula>
    <errorDisplayField>BillingPostalCode</errorDisplayField>
    <errorMessage>Length of Zip/Postal Code should be less than or equal to 10 characters.</errorMessage>
</ValidationRule>