force-app/main/default/objects/Account/listViews/Accounts_Created_This_Week.listView-meta.xml
<ListView>
    <fullName>Accounts_Created_This_Week</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.NAME_LOCAL</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Account_Status__c</columns>
    <columns>ERP_Customer_Id__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>Clinical_Type__c</columns>
    <columns>Market_Segment__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>Territory_Name__c</columns>
    <columns>Territory_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Accounts Created This Week</label>
</ListView>