force-app/main/default/objects/Account/listViews/All_Channel_Partner_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Channel_Partner_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.NAME_LOCAL</columns>
    <columns>Channel_Partner_Type__c</columns>
    <columns>Account_Status__c</columns>
    <columns>ERP_Customer_Id__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>Territory_Name__c</columns>
    <columns>Territory_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Indirect_Partner</value>
    </filters>
    <filters>
        <field>Account_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Channel Partner Accounts</label>
</ListView>