force-app/main/default/objects/Account/listViews/All_Clinical_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Clinical_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.NAME_LOCAL</columns>
    <columns>Ultimate_Parent__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Account_Status__c</columns>
    <columns>ERP_Customer_Id__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>Market_Segment__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>Territory_Name__c</columns>
    <columns>Territory_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Clinical_Type__c</field>
        <operation>equals</operation>
        <value>Clinical</value>
    </filters>
    <filters>
        <field>Account_Status__c</field>
        <operation>notEqual</operation>
        <value>Obsolete,Pending Obsolete</value>
    </filters>
    <filters>
        <field>Territory_Region__c</field>
        <operation>equals</operation>
        <value>AMR</value>
    </filters>
    <label>All Clinical Accounts</label>
</ListView>