force-app/main/default/objects/Account/listViews/All_Prospect_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Prospect_Accounts</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.NAME_LOCAL</columns>
    <columns>Account_Status__c</columns>
    <columns>Address_Status__c</columns>
    <columns>ERP_Customer_Id__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>Clinical_Type__c</columns>
    <columns>Market_Segment__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>Territory_Name__c</columns>
    <columns>Territory_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Prospect</value>
    </filters>
    <filters>
        <field>Account_Status__c</field>
        <operation>notEqual</operation>
        <value>Obsolete</value>
    </filters>
    <label>All Prospect Accounts</label>
</ListView>